# rustshad

./: Cargo.toml  LICENSE_MIT
public/: index.html
src/: lib.rs  main.rs  star.frag
